fix(style): avoid wrapping inline code

--- a/assets/css/doc.less
+++ b/assets/css/doc.less
@@ -129,6 +129,7 @@ h1 {
 
   code {
     color: @code-inline;
+    white-space: nowrap;
   }
   pre.highlight {
     overflow: auto;
